Change project stucture